--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcsh 'Cabo Verde -- Description and travel'
 - !lcsh 'Hydrography -- Cabo Verde'
 - !lcc 'GB'
+- GITenberg
 title: "Memoria hydrografica das ilhas de Cabo Verde\r\npara servir de instrucção\
   \ a carta das mesmas ilhas, publicada em o anno de 1790"
 url: http://www.gutenberg.org/ebooks/36404
